[metadata]
name = python-liquid
version = attr: liquid.__version__
description = A Python engine for the Liquid template language.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://jg-rp.github.io/liquid/
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls = 
    Documentation = https://jg-rp.github.io/liquid/
    Issue Tracker = https://github.com/jg-rp/liquid/issues
    Source Code = https://github.com/jg-rp/liquid
    Change Log = https://github.com/jg-rp/liquid/blob/main/CHANGES.rst

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    python-dateutil>=2.8.1
    typing-extensions>=4.2.0

[options.extras_require]
autoescape = MarkupSafe>=2.0.0

[options.packages.find]
exclude =
    docs*
    tests*

[mypy]
files = liquid
python_version = 3.10
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = False
warn_return_any = True
warn_unreachable = True

[coverage:run]
omit = 
    */.local/*
    .tox/*

[flake8]
max-line-length = 88
select = B, E, F, W, B9, ISC
ignore = E203, E501, W503, B905, B907